Tried some different ways of fixing the landing, now its clean on desktop, and ok on mobile

--- a/src/pages/Landing/Landing.scss
+++ b/src/pages/Landing/Landing.scss
@@ -1,15 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,700;1,400;1,700&display=swap');
 
 :root {
-  --left-bg-color: rgba(19, 19, 61, 0.7);
+  --left-bg-color: #1d1b1bc0;
   --right-bg-color: rgba(58, 48, 41, 0.6);
-  --left-btn-hover: rgba(19, 19, 61, 1);
-  --right-btn-hover:  #ec4d37;
+  --left-btn-hover: rgba(233, 86, 18, 0.7);
+  --right-btn-hover:  #f1cc9b;
 
   --hover-width: 80%;
   --hover-other-width: 20%;
 
-  --speed: 1500ms;
+  --speed: 600ms;
 }
 * {
   margin: 0;
@@ -18,6 +18,12 @@
 }
 
 .landing {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1000;
   font-family: 'Poppins', sans-serif;
   background: var(--color-bg);
   height: 100vh;
@@ -32,7 +38,7 @@
   height: 90%;
   background: rgb(35, 35, 35);
   filter: drop-shadow(0px 0px 1px white);
-  transition: all 0.3s ease;
+  transition: all 0.2s ease;
 }
 
 .right h1 {
